[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shinhan-asset-monitor"
version = "0.1.0"
description = "Collect holdings from multiple securities brokers and sync them to Google Sheets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "google-api-python-client>=2.175,<3",
    "google-auth>=2.40,<3",
    "playwright>=1.54,<2",
    "python-dotenv>=1.1,<2",
    "tzdata>=2026.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<9",
]

[project.scripts]
asset-monitor = "asset_monitor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
